--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,20 +1,18 @@
 name: flutter_barcode_scanner
 description: A plugin for barcode scanning support on Android and iOS. Supports barcodes, QR codes, etc.
 version: 2.0.0
-author: Amol Gangadhare <amol.gangadhare@gmail.com>
 homepage: https://github.com/AmolGangadhare/flutter_barcode_scanner
 
 environment:
-  sdk: '>=2.12.0 <3.0.0'
-  flutter: ">=1.12.0"
+  sdk: ">=2.18.0 <4.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  flutter_plugin_android_lifecycle: ^2.0.1
+  flutter_plugin_android_lifecycle: ^2.0.22
 dev_dependencies:
   pedantic: ^1.11.0
-  test: ^1.16.8
+  test: ^1.25.2
 
 flutter:
   # This section identifies this Flutter project as a plugin project.
