--- a/android/build.gradle
+++ b/android/build.gradle
@@ -23,7 +23,7 @@ apply plugin: 'com.android.library'
 
 android {
     compileSdk 34
-
+    namespace "com.amolg.flutterbarcodescanner"
     defaultConfig {
         minSdkVersion 23
         targetSdkVersion 34
