--- a/android/build.gradle
+++ b/android/build.gradle
@@ -55,4 +55,5 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'com.google.android.gms:play-services-vision:20.1.3'
+    implementation 'com.caverock:androidsvg:1.4'
 }
