--- a/barcode_scanner/ios/Runner/Info.plist
+++ b/barcode_scanner/ios/Runner/Info.plist
@@ -45,5 +45,9 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+	
+	<!-- Thêm quyền truy cập camera -->
+	<key>NSCameraUsageDescription</key>
+	<string>This app requires access to the camera to scan barcodes.</string>
 </dict>
 </plist>
