--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,10 +15,6 @@ dev_dependencies:
   test: ^1.25.2
 
 flutter:
-  # This section identifies this Flutter project as a plugin project.
-  # The androidPackage and pluginClass identifiers should not ordinarily
-  # be modified. They are used by the tooling to maintain consistency when
-  # adding or updating assets for this project.
   plugin:
     platforms:
       android:
@@ -26,3 +22,9 @@ flutter:
         pluginClass: FlutterBarcodeScannerPlugin
       ios:
         pluginClass: SwiftFlutterBarcodeScannerPlugin
+
+  assets:
+    - assets/icons/flashOff.svg
+    - assets/icons/flashOn.svg
+    - assets/icons/cancel-button.svg
+    - assets/icons/camera-switch.svg
